# advent-of-code-2023

common_funcs/: common_funcs.cpp
day-1/: CMakeLists.txt  sum_codes.cpp
day-2/: color_cubes.cpp  main.cpp
day-3/: CMakeLists.txt  add_part_nums.cpp
day-4/: CMakeLists.txt  scratchcard_winnings.cpp
day-5/: CMakeLists.txt  closest_seed.cpp
template/: CMakeLists.txt
